--- a/index.html
+++ b/index.html
@@ -1,78 +1,128 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="PT-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3930123584.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>Document</title>
-    <style>
-        * {
-            box-sizing: content-box;
-        }
-
-        body {
-            width: auto;
-            height: 100vh;
-        }
-
-        input {
-            width: 300px;
-            margin-top: 100px;
-        }
-
-        div {
-            margin: auto;
-            align-items: center;
-            display: flex;
-            flex-direction: row;
-            width: 300px;
-            height: 300px;
-            border: 1px;
-        }
-
-        button {
-            margin-top: 100px;
-        }
-    </style>
 </head>
 
 <body>
-    <div id='divPrincipal'>
-        <input id="inp" maxlength="14" class="inp" placeholder="Recipient's username" aria-label="Recipient's username"
-            aria-describedby="basic-addon2" onkeyup="validadores()">
-        <button class="btn btn-outline-secondary" type="button" id='botao'>Button</button>
-        <i class="fa-solid fa-check"></i>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #93C54B !important">
+        <a class="navbar-brand" href="#">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- ------------------------------------------------------------------ -->
+    <section class="">
+        <img src="assets/Agricultura-de-precisão.jpeg" alt="Imagem Pessoas segurandos plantas" class="imgInicial">
+    </section>
+    <section class="section_um">
+        <div class="conteudo">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet exercitationem eius vero, voluptatem
+                quas
+                asperiores at hic neque ex sit possimus molestias aliquid nostrum ipsam soluta adipisci eos, vitae ut.
+            </h1>
+        </div>
+        <div class="img">
+            <img src="assets/regiões-brasil.jpg" alt="Mapa Brasil" class="imgMapaBrasil">
+        </div>
+    </section>
+    <div class="circulos">
+        <div class="round"><i class="fa-solid fa-cow" style="font-size: 550%; color: white; margin: auto;"></i></div>
+        <div class="round"><i class="fa-solid fa-seedling" style="font-size: 600%; color: white; margin: auto;"></i>
+        </div>
+        <div class="round"><i class="fa-solid fa-droplet"
+                style="font-size: 650%; color: white; margin: 2% 10% 10% 10%;"></i></div>
+        <div class="round"><i class="fa-solid fa-apple-whole" style="font-size: 600%; color: white; margin: auto ;"></i>
+        </div>
+        <div class="round"><i class="fa-solid fa-earth-americas" style="font-size: 600%; color: white;"></i></div>
     </div>
-    <div id="result"></div>
-    <script src="script.js"></script>
-    <script>
-         const div = document.getElementById('result');
-         const inp = document.getElementById('inp')
-        function validadores(pDiv, pInp) {
-            pDiv = document.getElementById('result');
-            pInp = inp.value
+    <!-- segunda seção -->
+    <div>
+        <img src="assets/cerrado.jpg" alt="Imagem do cerrado" class="cerradoImg">
+    </div>
 
-            if(pInp.length < 14){
-                wText = validaCPF(pInp);
-               div.innerHTML = wText
-            } else{
-                wText = validadorCnpj(pInp)
-                div.innerHTML = wText
-            }
-        }
+    <section class="cerradoSection">
+        <div class="cerradoContent">
+            <h1>Cerrado</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minima, sapiente vel explicabo temporibus
+                ratione
+                modi, possimus voluptate maiores reprehenderit repellat suscipit fuga praesentium officia ducimus sequi
+                sint
+                neque
+                veniam?</p>
+        </div>
+        <div class="imagemCerradoDiv"> <img src="" alt="">
+            <h1>aqui vai uma imagem</h1>
+        </div>
+    </section>
+    <section class="cerradoSection">
+        <div class="cerradoContent">
+            <h1>Cerrado</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minima, sapiente vel explicabo temporibus
+                ratione
+                modi, possimus voluptate maiores reprehenderit repellat suscipit fuga praesentium officia ducimus sequi
+                sint
+                neque
+                veniam?</p>
+        </div>
+        <div class="imagemCerradoDiv"> <img src="" alt="">
+            <h1>aqui vai uma imagem</h1>
+        </div>
+    </section>
 
-        const wTeste = inp.value
+    <!-- ------------------------------------------------------------------ -->
 
-        wText = validaCPF();
-        div.innerHTML = wText
-
-        
-    </script>
+    <section class="cerradoSection">
+        <div class="cerradoContent">
+            <h1>Cerrado</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minima, sapiente vel explicabo temporibus
+                ratione
+                modi, possimus voluptate maiores reprehenderit repellat suscipit fuga praesentium officia ducimus sequi
+                sint
+                neque
+                veniam?</p>
+        </div>
+        <div class="imagemCerradoDiv"> <img src="" alt="">
+            <h1>aqui vai uma imagem</h1>
+        </div>
+    </section>
+</body>
 
 </html>
